compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__type_holes3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "external fn main(List(_)) -> Nil = \"\" \"\""

---
error: Unexpected type hole
  ┌─ /src/one/two.gleam:1:23
  │
1 │ external fn main(List(_)) -> Nil = "" ""
  │                       ^

We need to know the exact type here so type holes are not permitted.

